--- a/components/Sections/HomePageMidSection/HomePageMidSection.module.css
+++ b/components/Sections/HomePageMidSection/HomePageMidSection.module.css
@@ -1,10 +1,10 @@
 .container {
   display: grid;
-  /* align-items: center; */
+  /* align-items: end; */
   grid-template-columns: 45% 47%;
   margin: var(--ma-homepage);
   margin-bottom: 0;
-  gap: 8%;
+  gap: 10%;
 }
 
 .title {
